<resources>
    <string name="app_name">ForEver11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_matches">My Matches</string>
    <string name="title_winners">Winners</string>
    <string name="title_chat">Chat</string>
    <string name="title_Rewards">Rewards</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="title_activity_contest1">ContestActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>